feat(useSwrData): 优化

--- a/packages/useSwrData/package.json
+++ b/packages/useSwrData/package.json
@@ -21,6 +21,7 @@
   ],
   "scripts": {
     "build": "rollup -c",
+    "test": "vitest run",
     "prepublishOnly": "pnpm run build"
   },
   "dependencies": {
