--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -16,5 +16,5 @@
     "isolatedModules": true,
     "skipLibCheck": true
   },
-  "include": ["src", "vite.config.ts"]
+  "include": ["src", "main.tsx", "vite.config.ts"]
 }
