--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^4.16.2",
-    "@eslint-react/eslint-plugin": "^1.52.3",
+    "@antfu/eslint-config": "^6.2.0",
+    "@eslint-react/eslint-plugin": "^2.3.9",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
     "@testing-library/dom": "^10.4.0",
@@ -29,19 +29,19 @@
     "@types/node": "^20.12.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@typescript-eslint/eslint-plugin": "^7.6.0",
-    "@typescript-eslint/parser": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "^8.48.0",
+    "@typescript-eslint/parser": "^8.48.0",
     "eslint": "^9.31.0",
-    "eslint-plugin-format": "^1.0.1",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-format": "^1.0.2",
+    "eslint-plugin-react-hooks": "^7.0.1",
+    "eslint-plugin-react-refresh": "^0.4.24",
     "husky": "9.0.11",
     "jsdom": "^26.1.0",
     "lint-staged": "^15.2.2",
     "rollup": "^4.44.1",
     "rollup-plugin-delete": "^3.0.1",
     "tslib": "^2.8.1",
-    "typescript": "~5.5.0",
+    "typescript": "^5.9.3",
     "vitest": "^3.2.4"
   },
   "lint-staged": {
