--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,5 @@
     "isolatedModules": true,
     "skipLibCheck": true
   },
-  "exclude": ["node_modules", "dist", "demo"]
+  "exclude": ["node_modules", "*/**/dist", "demo"]
 }
